This file summarizes the major and interesting changes for each release.
For a detailed list of changes, please see ChangeLog.

0.16 (UNRELEASED):

 * Enhancements:

 * Bug fixes:
   - Fix right click context menu (LP: #945861)

0.15 (2012-03-22):

 * Enhancements:
   - Updated translations
   - Added KeePassX XML import script
   - Import scripts now warn about skipped fields

 * Bug fixes:
   - Give proper error when not specifying file to Figaro import script
   - Various cleanups
   - Properly handle utf-8 characters when importing Figaro xml file

0.14 (2012-02-29):

 * Enhancements:
   - Updated translations
   - Slightly improved appearance of main icon
   - Implemented search

 * Bug fixes:
   - Set proper window titles

0.13 (2012-02-14):

 * Enhancements:
   - Added random password generation
   - Lock now uses the main window to prevent a window from showing up
     on another workspace when the timeout occurs

 * Bug fixes:

0.12 (2012-02-04):

 * Enhancements:
   - Updated translations
   - Added a TODO item
   - Migrated to PyGObject and GSettings, thanks to Francesco Marella

 * Bug fixes (related to PyGObject and GSettings migration):
   - Get rid of traceback when quitting without a selection
   - Restore click on URL functionality
   - Fix initial size of notes field
   - Fix about dialog layout
   - Updated requirements in README file
   - Refactor and simplify GSettings code to use bindings
   - Add database path description to GSettings schema file
   - Add GConf to GSettings migration file
   - Fix crasher when sometimes adding a new entry

0.11 (2011-12-11):

 * Enhancements:
   - A help file is now available with basic usage instructions.
   - Re-enable launchpad integration
   - Added a README file

 * Bug fixes:
   - Removed debian packaging files from upstream project

0.10 (2011-10-02):

 * Enhancements:
   - Numerous improvements, thanks to Francesco Marella:
     - Figaro xml import script