@@ -7,6 +7,7 @@ For a detailed list of changes, please see ChangeLog.
 
  * Bug fixes:
    - Fix right click context menu (LP: #945861)
+   - Deactivate "Display secrets" button when not needed
 
 0.15 (2012-03-22):
 
